# Chess

./: .gitignore  CMakeLists.txt  README.md
assets/pieces/: README.md
src/: Makefile  benchmark.cpp  board.cpp  board.hpp  chessGUI.cpp  chessGUI.hpp  compare_versions.cpp  debug.cpp  demo_promotion.cpp  engine.cpp  engine.hpp  engine_v1.cpp  engine_v1.hpp  evaluation.cpp  evaluation.hpp  evaluation_v1.cpp  evaluation_v1.hpp  game.cpp  game.hpp  genetic_pst.cpp  genetic_tuning.cpp  loop_test.cpp  main.cpp  mainGui.cpp  moveGeneration.cpp  moveGeneration.hpp  speed_comparison.cpp  test.cpp  test_board.cpp  test_eval.cpp  test_full_eval.cpp  test_hash_search.cpp  test_promotion.cpp  test_queen.cpp  test_selfplay.cpp  test_simple_capture.cpp  test_tactics.cpp  test_tt.cpp  test_zobrist.cpp  tuning.cpp
